# ml-basics-from-scratch

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  environment.yml  vcpkg.json
include/containers/: array.h  matrix.h
include/io/: numpy.h
include/math/: function.h  function_generators.h  linalg.h
methods/kNN/: README.md
methods/kNN/cpp/: CMakeLists.txt
methods/kNN/cpp/include/: LinAlg.h  Matrix.h  kNN.h
methods/kNN/cpp/include/io/: numpy.h
methods/kNN/cpp/src/: LinAlg.cpp  Matrix.cpp  kNN.cpp  main.cpp
methods/kNN/cpp/src/io/: numpy.cpp
methods/kNN/data/: data_preparation.ipynb  test_data.h5  train_data.h5  train_data.npz
methods/kNN/python/: kNN.ipynb  kNN.py
methods/knn/cpp/: CMakeLists.txt
methods/knn/cpp/include/: knn.h  linalg.h  matrix.h
methods/knn/cpp/include/io/: numpy.h
methods/knn/cpp/src/: knn.cpp  linalg.cpp  main.cpp  matrix.cpp
methods/knn/cpp/src/io/: numpy.cpp
methods/knn/data/: data_preparation.ipynb  test_data.npz
methods/knn/python/: kNN.ipynb
optim/gradient_descent/: CMakeLists.txt
optim/gradient_descent/include/: gradient_descent.h
optim/gradient_descent/src/: gradient_descent.cpp  main.cpp
src/io/: numpy.cpp
src/math/: linalg.cpp
tests/: CMakeLists.txt
tests/containers/: test_array.cpp  test_matrix.cpp
